--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -117,15 +117,19 @@
 		width: 100%;
 	}
 }
-.ast-divider-layout-horizontal {
+
+.ast-hb-divider-layout-horizontal {
+	.ast-divider-layout-horizontal {
+		width: 100%;
+	}
+}
+.ast-fb-divider-layout-horizontal {
 	width: 100%;
 }
+.site-footer-section,
+.ast-footer-divider-element,
 .ast-header-divider-element {
 	height: 100%;
-}
-.site-footer-section,
-.ast-footer-divider-element {
-  height: 100%;
 }
 .footer-widget-area {
 	.ast-divider-wrapper {
